[gd_scene load_steps=5 format=3 uid="uid://bacpg17x5vs5i"]

[ext_resource type="Script" path="res://battlesim/top_bar/top_bar.gd" id="1_ha24x"]
[ext_resource type="Texture2D" uid="uid://bov1hs5fvyh28" path="res://assets/art/characters/team_heroes_portraits/eddy_circle_portrait.png" id="2_twtr6"]
[ext_resource type="Texture2D" uid="uid://c1c26xn47bydm" path="res://assets/art/characters/team_heroes_portraits/egon_circle_portrait.png" id="3_xn3un"]
[ext_resource type="Texture2D" uid="uid://crr23ptdcw80o" path="res://assets/art/characters/enemy_heroes_portraits/bruce_circle_portrait.png" id="4_o6cg4"]

[node name="TopBar" type="Control" groups=["top_bar", "update_post_match"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ha24x")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1180, 128)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -590.0
offset_right = 590.0
offset_bottom = 128.0
grow_horizontal = 2
color = Color(0.783858, 0.588423, 0.452125, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TopBarHB" type="HBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2

[node name="TeamHB" type="HBoxContainer" parent="ColorRect/MarginContainer/TopBarHB"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TeamHero1" type="TextureRect" parent="ColorRect/MarginContainer/TopBarHB/TeamHB"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_twtr6")
expand_mode = 2
stretch_mode = 4

[node name="TeamHero1VB" type="VBoxContainer" parent="ColorRect/MarginContainer/TopBarHB/TeamHB"]
layout_mode = 2
size_flags_horizontal = 3

[node name="KillsLabel1" type="Label" parent="ColorRect/MarginContainer/TopBarHB/TeamHB/TeamHero1VB"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Kills: "

[node name="DeathsLabel1" type="Label" parent="ColorRect/MarginContainer/TopBarHB/TeamHB/TeamHero1VB"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Deaths:"

[node name="KcLabel1" type="Label" parent="ColorRect/MarginContainer/TopBarHB/TeamHB/TeamHero1VB"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "KC:"

[node name="TeamHero2" type="TextureRect" parent="ColorRect/MarginContainer/TopBarHB/TeamHB"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_xn3un")
expand_mode = 2
stretch_mode = 4

[node name="TeamHero2VB2" type="VBoxContainer" parent="ColorRect/MarginContainer/TopBarHB/TeamHB"]
layout_mode = 2
size_flags_horizontal = 3

[node name="KillsLabel2" type="Label" parent="ColorRect/MarginContainer/TopBarHB/TeamHB/TeamHero2VB2"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Kills: "

[node name="DeathsLabel2" type="Label" parent="ColorRect/MarginContainer/TopBarHB/TeamHB/TeamHero2VB2"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Deaths:"

[node name="KcLabel2" type="Label" parent="ColorRect/MarginContainer/TopBarHB/TeamHB/TeamHero2VB2"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "KC:"

[node name="Control" type="Control" parent="ColorRect/MarginContainer/TopBarHB"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="MatchTimerLabel" type="Label" parent="ColorRect/MarginContainer/TopBarHB/Control"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 4.0
offset_top = 19.0
offset_right = 138.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_type_variation = &"HeaderLarge"
text = "00:00"
horizontal_alignment = 1

[node name="EnemyHB" type="HBoxContainer" parent="ColorRect/MarginContainer/TopBarHB"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EnemyHero1VB" type="VBoxContainer" parent="ColorRect/MarginContainer/TopBarHB/EnemyHB"]
layout_mode = 2
size_flags_horizontal = 3

[node name="KillsLabel3" type="Label" parent="ColorRect/MarginContainer/TopBarHB/EnemyHB/EnemyHero1VB"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Kills: "

[node name="DeathsLabel3" type="Label" parent="ColorRect/MarginContainer/TopBarHB/EnemyHB/EnemyHero1VB"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Deaths:"

[node name="KcLabel3" type="Label" parent="ColorRect/MarginContainer/TopBarHB/EnemyHB/EnemyHero1VB"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "KC:"

[node name="EnemyHero1" type="TextureRect" parent="ColorRect/MarginContainer/TopBarHB/EnemyHB"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_o6cg4")
expand_mode = 2
stretch_mode = 4

[node name="EnemyHero1VB2" type="VBoxContainer" parent="ColorRect/MarginContainer/TopBarHB/EnemyHB"]
layout_mode = 2
size_flags_horizontal = 3

[node name="KillsLabel4" type="Label" parent="ColorRect/MarginContainer/TopBarHB/EnemyHB/EnemyHero1VB2"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Kills: "

[node name="DeathsLabel4" type="Label" parent="ColorRect/MarginContainer/TopBarHB/EnemyHB/EnemyHero1VB2"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Deaths:"

[node name="KcLabel4" type="Label" parent="ColorRect/MarginContainer/TopBarHB/EnemyHB/EnemyHero1VB2"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "KC:"

[node name="EnemyHero2" type="TextureRect" parent="ColorRect/MarginContainer/TopBarHB/EnemyHB"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_o6cg4")
expand_mode = 2
stretch_mode = 4

[node name="MatchTimer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="timeout" from="MatchTimer" to="." method="_on_match_timer_timeout"]
